--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
 }
+body {
+    background-color: #efe196;
+}
 .d-flex{
     display: flex;
     justify-content: space-between;
@@ -138,7 +141,7 @@ header a:hover{
         left: 307px;
         top: 0.6em;
         padding: 0.5em;
-        background: inherit;
+        background: transparent;
         color: #ffffff;
         font-weight: bold;
         cursor: pointer;
@@ -358,5 +361,124 @@ footer p{
     color: #F5E162;
     font-size: 12px;
     font-family: 'Open Sans', sans-serif;
+
+}
+/*Email input form*/
+    .footer_1_input{
+        color: #FA7A48;
+        padding: 10px;
+        width: 100%;
+        border: 1px solid #FA7A48;
+        background-color: white;
+        margin-bottom: 30px;
+        box-sizing: border-box;
+        outline: none;
+    }
+    .footer_1_input::placeholder{
+        color: #FA7A48;
+    }
+    .footer_1_input_2::placeholder{
+        color: #FA7A48;
+    }
+    .footer_1_input_2{
+        color: #FA7A48;
+        padding: 10px;
+        width: 100%;
+        border: 1px solid #FA7A48;
+        background-color: white;
+        margin-bottom: 30px;
+        box-sizing: border-box;
+        outline: none;
+        height: 150px;
+    }
+    .footer_1_button{
+        width: 100%;
+        background-color: #F5E162;
+        color: #FA7A48;
+        font-size: 22px;
+        text-align: center;
+        padding: 12px;
+        text-transform: uppercase;
+        font-weight: bold;
+        border: 2px solid #F5E162;
+        margin-bottom: 30px;
+    }
+    .footer_1_button:hover{
+        color: #FA7A48;
+        border-color: #FA7A48;
+        background-color: #ffe3da;
+        transition: 0.4s;
+    }
+
+    .email_h2{
+        margin-bottom: 30px;
+        font-size: 30px;
+        font-family: 'Raleway', sans-serif;
+        font-weight: bold;
+        color: #FA7A48;
+        text-transform: uppercase;
+    }
+
+.gallery{
+    background-color: #efe196;
+    padding-bottom: 50px;
+}
+.photo_line{
+    width: 100%;
+}
+.photo_img{
+    width: 30%;
+    overflow: hidden;
+    margin-bottom: 10px;
+    border-radius: 8px;
+    transition: 0.5s;
+}
+.photo_img:hover{
+    transform: scale(1.1);
+}
+.ffkfk{
+    font-size: 20px;
+    font-family: 'Raleway', sans-serif;
+    color: #FA7A48;
+}
+.white-block{
+    width: 100%;
+    padding: 10px;
+    background-color: white;
+    border: 2px solid #FA7A48;
+    box-sizing: border-box;
+    border-radius: 8px;
+    margin-bottom: 30px;
+}
+.item{
+    width: 100%;
+    padding: 10px;
+    background-color: white;
+    border: 2px solid #FA7A48;
+    box-sizing: border-box;
+    border-radius: 8px;
+    margin-bottom: 30px;
+    transition: 0.7s;
+}
+.item:hover{
+    transform: scale(1.05);
+}
+.item-sec img{
+    width: 25%;
+}
+.info_h4{
+    color: #FA7A48;
+    text-transform: uppercase;
+    font-family: 'Raleway', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+}
+.item-text p{
+    margin-top: 30px;
+    margin-bottom: 50px;
+    color: #FA7A48;
+    font-size: 16px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: normal;
 
 }
